bug/issue 66 vertically center align Twitter / X social icons (#67)

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -30,6 +30,11 @@
   cursor: pointer;
 }
 
+.socialIcon {
+  display: flex;
+  align-items: center;
+}
+
 .socialIcon svg {
   fill: var(--color-gray);
 }
